--- a/Java/project3.0/src/main/resources/static/css/common2.css
+++ b/Java/project3.0/src/main/resources/static/css/common2.css
@@ -3838,7 +3838,7 @@ button,input,select,textarea {
 }
 
 .banner {
-    background: url("../home/release/image/20210525/e-banner5.png") no-repeat;
+    background: url("../img/e-banner5.png") no-repeat;
     width: 100%;
     height: 530px;
     position: relative
